--- a/browser/templates/browser/index.html
+++ b/browser/templates/browser/index.html
@@ -1,4 +1,7 @@
 {% extends "browser/base.html" %}
+{% block head %}
+<title>SB Browser</title>
+{% endblock head %}
 {% block body %}
     {% include "browser/table.html" %}
 {% endblock body %}
