--- a/browser/templates/browser/username.html
+++ b/browser/templates/browser/username.html
@@ -5,10 +5,11 @@
 {% block body %}
     <div class="row">
         <div class="col-4">
-            # TODO: implement
-            Unique users: X
-            Submissions: X
-            Ignored: X
+            <ul class="list-group list-group-horizontal">
+                <li class="list-group-item">Unique users: {{ uniques }}</li>
+                <li class="list-group-item">Submissions: {{ submissions }}</li>
+                <li class="list-group-item">Ignored: {{ ignored }}</li>
+            </ul>
         </div>
     </div>
     {% include "browser/table.html" %}
