--- a/browser/templates/browser/video.html
+++ b/browser/templates/browser/video.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="col-4">
-            <ul class="list-group">
+            <ul class="list-group mt-1">
                 <li class="list-group-item">Submissions: {{ submissions }}</li>
                 <li class="list-group-item">Ignored: {{ ignored }}</li>
             </ul>
