--- a/browser/templates/browser/table.html
+++ b/browser/templates/browser/table.html
@@ -5,10 +5,10 @@
 {% if filter %}
         <div class="row">
             <div class="col">
-                <form action="" method="get" class="form form-inline" id="filterForm">
-                    {% bootstrap_form filter.form layout='inline' %}
-                    <button class="btn btn-secondary" onclick="resetForm($('#filterForm'));" type="button">Clear</button>
-                    {% bootstrap_button 'Filter' %}
+                <form action="" method="get" class="form form-inline my-1" id="filterForm">
+                    {% bootstrap_form filter.form layout='inline' field_class='mx-1' %}
+                    <button class="btn btn-secondary mx-1" onclick="resetForm($('#filterForm'));" type="button">Clear</button>
+                    {% bootstrap_button 'Filter' extra_classes='mx-1' %}
                 </form>
             </div>
         </div>
