--- a/browser/templates/browser/username.html
+++ b/browser/templates/browser/username.html
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="row">
         <div class="col-4">
-            <ul class="list-group list-group-horizontal">
+            <ul class="list-group list-group-horizontal mt-1">
                 <li class="list-group-item">Unique users: {{ uniques }}</li>
                 <li class="list-group-item">Submissions: {{ submissions }}</li>
                 <li class="list-group-item">Ignored: {{ ignored }}</li>
