--- a/browser/templates/browser/video.html
+++ b/browser/templates/browser/video.html
@@ -1,3 +1,4 @@
+{# SPDX-License-Identifier: AGPL-3.0-or-later #}
 {% extends "browser/base.html" %}
 {% block head %}
     <title>{{ videoid }} | SB Browser</title>
