--- a/browser/templates/browser/username.html
+++ b/browser/templates/browser/username.html
@@ -7,6 +7,7 @@
     <div class="row">
         <div class="col-4">
             <ul class="list-group list-group-horizontal mt-1">
+                <li class="list-group-item">Username: {{ username }}</li>
                 <li class="list-group-item">Unique users: {{ uniques }}</li>
                 <li class="list-group-item">Submissions: {{ submissions }}</li>
                 <li class="list-group-item">Ignored: {{ ignored }}</li>
