--- a/browser/templates/browser/video.html
+++ b/browser/templates/browser/video.html
@@ -14,6 +14,7 @@
             <ul class="list-group mt-1">
                 <li class="list-group-item">Submissions: {{ submissions }}</li>
                 <li class="list-group-item">Ignored: {{ ignored }}</li>
+                <li class="list-group-item"><a href="https://www.youtu.be/{{ videoid }}">YouTube 🔗</a></li>
             </ul>
         </div>
     </div>
