Total views, ignored views, list of userids, ignored percentages. Query result count

--- a/browser/templates/browser/table.html
+++ b/browser/templates/browser/table.html
@@ -70,7 +70,6 @@
                     </table>
                 </div>
             {% endblock table %}
-
             {% block pagination %}
                 {% if table.page and table.paginator.num_pages > 1 %}
                 <nav aria-label="Table navigation">
@@ -110,6 +109,7 @@
                 </nav>
                 {% endif %}
             {% endblock pagination %}
+            <div>Query results: {{ table.rows|length }}</div>
         </div>
     </div>
 </div>
