--- a/browser/templates/browser/userid.html
+++ b/browser/templates/browser/userid.html
@@ -7,9 +7,11 @@
     <div class="row">
         <div class="col">
             <ul class="list-group list-group-horizontal mt-1">
-                <li class="list-group-item">Username: {{ username }}</li>
-                <li class="list-group-item">Submissions: {{ submissions }}</li>
-                <li class="list-group-item">Ignored: {{ ignored }}</li>
+                <li class="list-group-item">Username:<br><a href="/username/{{ username }}/">{{ username }}</a></li>
+                <li class="list-group-item">Submissions:<br>{{ submissions }}</li>
+                <li class="list-group-item">Ignored submissions:<br>{{ ignored }} ({{ percent_ignored }}%)</li>
+                <li class="list-group-item">Views:<br>{{ views }}</li>
+                <li class="list-group-item">Ignored views:<br>{{ ignored_views }} ({{ percent_ignored_views }}%)</li>
             </ul>
         </div>
     </div>
