Highlight vips throughout the site

--- a/browser/templates/browser/base.html
+++ b/browser/templates/browser/base.html
@@ -15,6 +15,10 @@
             border: none;
             background: none;
         }
+
+        span.vip {
+            padding-left: 8px;
+        }
     </style>
     {% block head %}
     {% endblock head %}
