--- a/browser/templates/browser/userid.html
+++ b/browser/templates/browser/userid.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col">
             <ul class="list-group list-group-horizontal mt-1">
-                <li class="list-group-item">Username:<br><a href="/username/{{ username }}/">{{ username }}</a></li>
+                <li class="list-group-item">Username:<br><a href="/username/{{ username }}/">{{ username }}{% if vip %}<span class="vip" title="This user is a VIP">👑</span>{% endif %}</a></li>
                 <li class="list-group-item">Submissions:<br>{{ submissions }}</li>
                 <li class="list-group-item">Ignored submissions:<br>{{ ignored }} ({{ percent_ignored }}%)</li>
                 <li class="list-group-item">Views:<br>{{ views }}</li>
