Move VIP segment indicator from userid column to votes column. Username page indicator on it's own row to try and differentiate from username

--- a/browser/templates/browser/username.html
+++ b/browser/templates/browser/username.html
@@ -21,7 +21,7 @@
             <ul class="list-group">
             {% for userid in uniques %}
                 {% is_vip userid as vip %}
-                <li class="list-group-item"><a href="/userid/{{ userid }}/">{{ userid }}{% if vip %}<span class="vip" title="This user is a VIP">👑</span>{% endif %}</a></li>
+                <li class="list-group-item"><a href="/userid/{{ userid }}/">{{ userid }}</a>{% if vip %}<span class="vip" title="This user is a VIP">👑</span>{% endif %}</li>
             {% endfor %}
             </ul>
         </div>
