--- a/browser/templates/browser/base.html
+++ b/browser/templates/browser/base.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="{% static 'browser/toggle-bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'browser/toggle-bootstrap-dark.min.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'browser/logo.png' %}" />
     <style>
         textarea {
             resize: horizontal;
@@ -19,6 +20,11 @@
         span.vip {
             padding-left: 8px;
         }
+
+        nav img {
+            max-height: 40px;
+            margin-right: 5px;
+        }
     </style>
     {% block head %}
     {% endblock head %}
@@ -28,6 +34,7 @@
         <div class="row">
             <div class="col">
                 <nav class="navbar navbar-expand-lg navbar-themed">
+                    <img src="{% static 'browser/logo.png' %}" alt="Logo"/>
                     <a class="navbar-brand" href="/">SB Browser</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
