--- a/browser/templates/browser/username.html
+++ b/browser/templates/browser/username.html
@@ -20,7 +20,7 @@
             <ul class="list-group">
             {% for userid in uniques %}
                 {% is_vip userid as vip %}
-                <li class="list-group-item"><a href="/userid/{{ userid }}/">{{ userid }}</a>{% if vip %}<span class="vip" title="This user is a VIP">👑</span>{% endif %}</li>
+                <li class="list-group-item"><a class="pr-1" href="/userid/{{ userid }}/">{{ userid }}</a>{% if vip %}<span title="This user is a VIP">👑</span>{% endif %}</li>
             {% endfor %}
             </ul>
         </div>
