Update old links

--- a/browser/templates/browser/base.html
+++ b/browser/templates/browser/base.html
@@ -53,7 +53,7 @@
                 Last update: {{ updated }} All times UTC
             </div>
             <div class="col">
-                <a href="https://github.com/Lartza/SBtools">SBtools</a> &copy; {% now 'Y' %} Lartza, licensed under AGPLv3. SponsorBlock data is used under CC BY-NC-SA 4.0. More details: <a href="https://sponsor.ajay.app/">https://sponsor.ajay.app/</a>
+                <a href="https://github.com/Lartza/SBbrowser">SBbrowser</a> &copy; {% now 'Y' %} Lartza, licensed under AGPLv3. SponsorBlock data is used under CC BY-NC-SA 4.0. More details: <a href="https://sponsor.ajay.app/">https://sponsor.ajay.app/</a>
             </div>
         </div>
     </div>
