Count hidden segments

--- a/browser/templates/browser/username.html
+++ b/browser/templates/browser/username.html
@@ -11,7 +11,7 @@
                 <li class="list-group-item">Username:<br>{{ username }}</li>
                 <li class="list-group-item">Unique users:<br>{{ uniques_count }}</li>
                 <li class="list-group-item">Submissions:<br>{{ submissions }}</li>
-                <li class="list-group-item">Ignored submissions:<br>{{ ignored }} ({{ percent_ignored }}%)</li>
+                <li class="list-group-item">Ignored submissions:<br>{{ ignored }} ({{ percent_ignored }}%) <span title="Segments that are also not sent to users, but don't count as ignored">+ {{ hidden }} ❓</span></li>
                 <li class="list-group-item">Views:<br>{{ views }}</li>
                 <li class="list-group-item">Ignored views:<br>{{ ignored_views }} ({{ percent_ignored_views }}%)</li>
             </ul>
