Reset page when sorting by a new column

--- a/browser/templates/browser/table.html
+++ b/browser/templates/browser/table.html
@@ -27,7 +27,7 @@
                             {% for column in table.columns %}
                                 <th {{ column.attrs.th.as_html }}>
                                     {% if column.orderable %}
-                                        <a href="{% querystring table.prefixed_order_by_field=column.order_by_alias.next %}">{{ column.header }}</a>
+                                        <a href="{% querystring table.prefixed_order_by_field=column.order_by_alias.next 'search'='' %}">{{ column.header }}</a>
                                     {% else %}
                                         {{ column.header }}
                                     {% endif %}
