--- a/browser/templates/browser/base.html
+++ b/browser/templates/browser/base.html
@@ -1,48 +1,67 @@
 {# SPDX-License-Identifier: AGPL-3.0-or-later #}
 {% load static %}
-{% load bootstrap4 %}
+{% load django_bootstrap5 %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{% static 'browser/toggle-bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'browser/toggle-bootstrap-dark.min.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="color-scheme" content="dark light">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-unlit.min.css" rel="stylesheet">
+    <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)">
     <link rel="icon" type="image/png" href="{% static 'browser/logo.png' %}" />
     <style>
+        a {
+            text-decoration: none;
+            color: #6E8CAA;
+        }
+
+        .page-link {
+            color: #91A8C0;
+        }
+
+        @media (prefers-color-scheme: light) {
+            a, .page-link {
+                color: #0d6efd;
+            }
+        }
+
         textarea {
             resize: horizontal;
         }
-        button {
+
+        table button {
             border: none;
             background: none;
         }
 
-        nav img {
+        nav img, .navbar-brand {
             max-height: 40px;
-            margin-right: 5px;
         }
     </style>
     {% block head %}
     {% endblock head %}
 </head>
-<body class="bootstrap-dark">
+<body>
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <nav class="navbar navbar-expand-lg navbar-themed">
-                    <img src="{% static 'browser/logo.png' %}" alt="Logo"/>
-                    <a class="navbar-brand" href="/">SB Browser</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <nav class="navbar navbar-expand-sm navbar-light bg-light">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">
+                            <img src="{% static 'browser/logo.png' %}" alt="Logo" class="d-inline-block">
+                            SB Browser
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item">
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
                                 <a class="nav-link" href="/">Home</a>
-                            </li>
-                        </ul>
+                            </div>
+                        </div>
                     </div>
-                    <button class="btn btn-secondary" id="css_toggle" title="Dark mode toggle">Dark/Light</button>
                 </nav>
             </div>
         </div>
@@ -57,7 +76,8 @@
             </div>
         </div>
     </div>
-    {% bootstrap_javascript jquery="slim" %}
+    {% bootstrap_javascript %}
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <script src="{% static 'browser/sbtools.js' %}"></script>
 </body>
 </html>
