--- a/browser/templates/browser/base.html
+++ b/browser/templates/browser/base.html
@@ -72,7 +72,7 @@
                 Last update: {{ updated }} All times UTC
             </div>
             <div class="col">
-                <a href="https://github.com/Lartza/SBbrowser">SBbrowser</a> &copy; {% now 'Y' %} Lartza, licensed under AGPLv3. SponsorBlock data is used under CC BY-NC-SA 4.0. More details: <a href="https://sponsor.ajay.app/">https://sponsor.ajay.app/</a>
+                <a href="https://github.com/Lartza/SBbrowser">SBbrowser</a> &copy; {% now 'Y' %} Lartza, licensed under AGPLv3. Uses SponsorBlock data licensed used under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> from <a href="https://sponsor.ajay.app/">https://sponsor.ajay.app/</a>.
             </div>
         </div>
     </div>
