--- a/browser/templates/browser/base.html
+++ b/browser/templates/browser/base.html
@@ -7,24 +7,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-unlit.min.css" rel="stylesheet">
-    <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)">
-    <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightshade.min.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="{% static 'browser/logo.png' %}" />
     <style>
         a {
             text-decoration: none;
+        }
+
+        html.dark a {
             color: #6E8CAA;
         }
 
-        .page-link {
+        html.dark .page-link {
             color: #91A8C0;
-        }
-
-        @media (prefers-color-scheme: light) {
-            a, .page-link {
-                color: #0d6efd;
-            }
         }
 
         textarea {
@@ -61,6 +56,7 @@
                                 <a class="nav-link" href="/">Home</a>
                             </div>
                         </div>
+                        <button class="btn btn-secondary" id="darkmode" title="Dark mode toggle">Dark/Light</button>
                     </div>
                 </nav>
             </div>
@@ -78,6 +74,7 @@
     </div>
     {% bootstrap_javascript %}
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/js/darkmode.min.js"></script>
     <script src="{% static 'browser/sbtools.js' %}"></script>
 </body>
 </html>
