--- a/browser/templates/browser/base.html
+++ b/browser/templates/browser/base.html
@@ -9,53 +9,12 @@
     <meta name="color-scheme" content="dark light">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightshade.min.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="{% static 'browser/logo.png' %}" />
-    <style>
-        a {
-            text-decoration: none;
-        }
-
-        html.dark a {
-            color: #6E8CAA;
-        }
-
-        html.dark .page-link {
-            color: #91A8C0;
-        }
-
-        html.dark .form-control {
-            border-color: #8A8A8A;
-        }
-
-        html.dark .bg-light {
-            background-color: #737373 !important;
-        }
-
-        textarea {
-            resize: horizontal;
-        }
-
-        table button {
-            border: none;
-            background: none;
-        }
-
-        nav img, .navbar-brand {
-            max-height: 40px;
-        }
-
-        .table {
-            display: table;
-        }
-
-        .table form {
-            border: 0 !important;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{% static 'browser/style.css' %}">
     {% block head %}
     {% endblock head %}
 </head>
 <body>
-    <div class="table">
+    <div class="table-display">
         <nav class="navbar navbar-light bg-light ">
             <a class="navbar-brand ms-2" href="/">
                 <img src="{% static 'browser/logo.png' %}" alt="Logo" class="d-inline-block">
@@ -71,7 +30,7 @@
             Last update: {{ updated }} All times UTC
         </div>
         <div class="col">
-            <a href="https://github.com/Lartza/SBbrowser">SBbrowser</a> &copy; {% now 'Y' %} Lartza, licensed under AGPLv3. Uses SponsorBlock data licensed used under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> from <a href="https://sponsor.ajay.app/">https://sponsor.ajay.app/</a>.
+            <a href="https://github.com/Lartza/SBbrowser">SBbrowser</a> &copy; {% now 'Y' %} Lartza, licensed under AGPLv3. Uses SponsorBlock data licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> from <a href="https://sponsor.ajay.app/">https://sponsor.ajay.app/</a>.
         </div>
     </div>
     {% bootstrap_javascript %}
