--- a/browser/templates/browser/base.html
+++ b/browser/templates/browser/base.html
@@ -2,11 +2,10 @@
 {% load static %}
 {% load django_bootstrap5 %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="color-scheme" content="dark light">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightshade.min.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="{% static 'browser/logo.png' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'browser/style.css' %}">
@@ -34,8 +33,8 @@
         </div>
     </div>
     {% bootstrap_javascript %}
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/js/darkmode.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <script src="{% static 'browser/sbtools.js' %}"></script>
 </body>
 </html>
