Return to first page if sorting on non-last page. Closes #16

--- a/browser/templates/browser/table.html
+++ b/browser/templates/browser/table.html
@@ -21,7 +21,11 @@
             {% for column in table.columns %}
                 <th {{ column.attrs.th.as_html }}>
                     {% if column.orderable %}
-                        <a href="{% querystring table.prefixed_order_by_field=column.order_by_alias.next %}">{{ column.header }}</a>
+                        {% if table.page.has_next %}
+                            <a href="{% querystring table.prefixed_order_by_field=column.order_by_alias.next 'page'='' %}">{{ column.header }}</a>
+                        {% else %}
+                            <a href="{% querystring table.prefixed_order_by_field=column.order_by_alias.next %}">{{ column.header }}</a>
+                        {% endif %}
                     {% else %}
                         {{ column.header }}
                     {% endif %}
