Fix desktop layout, break mobile layout

--- a/browser/static/browser/style.css
+++ b/browser/static/browser/style.css
@@ -1,3 +1,7 @@
+html.dark {
+    color-scheme: dark;
+}
+
 a {
     text-decoration: none;
 }
@@ -29,8 +33,4 @@ table button {
 
 nav img, .navbar-brand {
     max-height: 40px;
-}
-
-.table-display {
-    display: table;
 }
