--- a/browser/templates/browser/video.html
+++ b/browser/templates/browser/video.html
@@ -4,14 +4,14 @@
     <title>{{ videoid }} | SB Browser</title>
 {% endblock head %}
 {% block body %}
-    <div class="row">
-        <div class="col-4">
+    <div class="row mt-2">
+        <div class="col-12 col-md-6 col-lg-4">
             <div class="ratio ratio-16x9">
               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ videoid }}?rel=0" allowfullscreen></iframe>
             </div>
         </div>
-        <div class="col-4">
-            <ul class="list-group mt-1">
+        <div class="col-auto">
+            <ul class="list-group">
                 <li class="list-group-item">Submissions: {{ submissions }}</li>
                 <li class="list-group-item">Ignored: {{ ignored }}</li>
                 <li class="list-group-item">Locked skips: {{ lockcategories_skip }}</li>
