--- a/browser/templates/browser/base.html
+++ b/browser/templates/browser/base.html
@@ -16,12 +16,22 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <nav class="navbar navbar-light bg-light ">
-                    <a class="navbar-brand ms-2" href="/">
-                        <img src="{% static 'browser/logo.png' %}" alt="Logo" class="d-inline-block">
-                        SB Browser
-                    </a>
-                    <button class="btn btn-secondary me-2" id="darkmode" title="Dark mode toggle">Dark/Light</button>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        <a class="navbar-brand ms-2" href="/">
+                            <img src="{% static 'browser/logo.png' %}" alt="Logo" class="d-inline-block">
+                            SB Browser
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <div class="navbar-nav">
+                                <a class="nav-link active" aria-current="page" href="/database">Database download</a>
+                            </div>
+                        </div>
+                        <button class="btn btn-secondary me-2" id="darkmode" title="Dark mode toggle">Dark/Light</button>
+                    </div>
                 </nav>
             </div>
         </div>
