--- a/browser/templates/browser/index.html
+++ b/browser/templates/browser/index.html
@@ -9,25 +9,32 @@
 {% endblock head %}
 {% block body %}
     <div class="row">
-        <div class="col-12 col-sm-4">
+        <div class="col-12 col-md-3">
             <form action={% url 'index' %} method="post">
                 {% csrf_token %}
                 {% bootstrap_form videoidform %}
                 <button type="submit" class="btn btn-primary" name="videoid_go" value="videoid_go">Go</button>
             </form>
         </div>
-        <div class="col-12 col-sm-4">
+        <div class="col-12 col-md-3">
             <form action={% url 'index' %} method="post">
                 {% csrf_token %}
                 {% bootstrap_form usernameform %}
                 <button type="submit" class="btn btn-primary" name="username_go" value="username_go">Go</button>
             </form>
         </div>
-        <div class="col-12 col-sm-4">
+        <div class="col-12 col-md-3">
             <form action={% url 'index' %} method="post">
                 {% csrf_token %}
                 {% bootstrap_form useridform %}
                 <button type="submit" class="btn btn-primary" name="userid_go" value="userid_go">Go</button>
+            </form>
+        </div>
+        <div class="col-12 col-md-3">
+            <form action={% url 'index' %} method="post">
+                {% csrf_token %}
+                {% bootstrap_form uuidform %}
+                <button type="submit" class="btn btn-primary" name="uuid_go" value="uuid_go">Go</button>
             </form>
         </div>
     </div>
