--- a/browser/templates/browser/uuid.html
+++ b/browser/templates/browser/uuid.html
@@ -34,7 +34,7 @@
                 <li class="list-group-item">Locked skips: {{ lockcategories_skip }}</li>
                 <li class="list-group-item">Locked mutes: {{ lockcategories_mute }}</li>
                 <li class="list-group-item">Locked full: {{ lockcategories_full }}</li>
-                <li class="list-group-item"><a href="https://youtu.be/{{ videoid }}?start={{ start }}&end={{ end }}#requiredSegment={{ uuid.uuid }}">YouTube 🔗</a> (with requiredSegment and start/end times) <a class="float-end" href="/video/{{ videoid }}/">Video page 🔗</a></li>
+                <li class="list-group-item"><a href="https://youtu.be/{{ videoid }}?start={{ start }}&end={{ end }}#requiredSegment={{ uuid.uuid }}">YouTube 🔗</a> (with requiredSegment and start/end times)<a class="float-end ms-1" href="/video/{{ videoid }}/">Video page 🔗</a></li>
             </ul>
         </div>
     </div>
