Max width for UUID and UserID textarea, cleaner header names

--- a/browser/static/browser/style.css
+++ b/browser/static/browser/style.css
@@ -38,3 +38,11 @@ table button {
 .page-link {
     white-space: nowrap;
 }
+
+.uuid {
+    max-width: 150px;
+}
+
+.userid {
+    max-width: 200px;
+}
