Show warnings on userid page

--- a/browser/static/browser/style.css
+++ b/browser/static/browser/style.css
@@ -46,3 +46,9 @@ table button {
 .userid {
     max-width: 200px;
 }
+
+.warning-textarea {
+    width: 600px;
+    min-height: 20px !important;
+    line-height: 20px;
+}
